--- a/groups/templates/group-posts/edit.html
+++ b/groups/templates/group-posts/edit.html
@@ -1,11 +1,13 @@
 {% extends "layout.html"%}
+{% load crispy_forms_tags %}
+
 
 {% block body %} 
     <div class="container">
         <h1>Edit Book</h1>
         <form action="{% url "group.edit" data.id %}" method="post">
             {% csrf_token %}
-            {{ form.as_p}}
+            {{ form|crispy}}
             <button type="submit">Update Post</button>
         </form>
     </div>
