--- a/accounts/templates/accounts/editProfile.html
+++ b/accounts/templates/accounts/editProfile.html
@@ -2,13 +2,14 @@
 {% block title %} edit {% endblock %}
 
 {% block content %}
+{% load crispy_forms_tags %}
 <div class="container pt-2 ">
     <div class="post-topbar">
     <form  method="post"  action="{% url  "editProfile" user.id   %}" enctype="multipart/form-data">
         <table class="table table-bordered table-hover">
         {% csrf_token %}
-        {{ form.as_table }}
-        {{profile.as_table}}
+        {{ form|crispy }}
+        {{profile|crispy}}
         <tr>
             <td></td>
             <td><input type="submit" name="submit" value="Register" /></td>
