--- a/groups/templates/groups/create.html
+++ b/groups/templates/groups/create.html
@@ -1,4 +1,6 @@
-{% extends "layout.html"%} {% block body %}
+{% extends "layout.html"%} 
+
+{% block body %}
 
 <div class="container mycard p-5 m-5 d-flex justify-content-around"style="width:80%">
   <div>
