--- a/posts/templates/posts/add_comment.html
+++ b/posts/templates/posts/add_comment.html
@@ -1,4 +1,5 @@
 {% extends "layout.html"%}
+{% load crispy_forms_tags %}
 
 {% block title %}Comment On Post{% endblock %}
 
@@ -10,7 +11,7 @@
         
         <form action='{% url "add_comment"  post.id%}' method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy}}
             
             <button class="comment-btn" type="submit">Add Comment</button>
           
