--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
           <div
             class="col-lg-5 col-sm-9 col-xs-8 d-flex align-items-center justify-content-around"
           >
-            <a href="/posts/" id="navLink"
+            <a href="{% home %}" id="navLink"
               ><i class="fa fa-home" aria-hidden="true"></i>
               <p>Home</p></a
             >
