--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -37,11 +37,11 @@
                     {% if checker.request_sent == 0 %}
                     <div class="card m-2 p-4">
                         <div class="">
-                            <span id="id_confirm_{{account.id}}"  class="confirm-friend-request px-1 m-auto btn post"
+                            <span id="id_confirm_{{account.id}}" class="confirm-friend-request px-1 m-auto btn post"
                                 onclick='triggerAcceptFriendRequest("{{checker.pending_friend_request_id}}")'><i
                                     class="fas fa-check-circle "></i> Confirm Request</span>
 
-                            <span id="id_cancel_{{id}}"  class="decline-friend-request  my-1 btn post "
+                            <span id="id_cancel_{{id}}" class="decline-friend-request  my-1 btn post "
                                 onclick='triggerDeclineFriendRequest("{{checker.pending_friend_request_id}}")'><i
                                     class="fas fa-times-circle "></i> Decline Request</span>
 
@@ -73,23 +73,12 @@
 
                     {% if checker.is_friend %}
                     <div class="profile-userbuttons d-flex flex-row align-items-center m-auto px-2">
-                        <!-- <button class="btn btn-secondary " type="button" id="id_friends_toggle">
-                            Friends
-                        </button> -->
-                        <!-- <div class="dropdown-menu"> -->
                         <button class="btn btn-secondary m-auto " id="id_unfriend_btn">Unfriend</button>
-                        <!-- </div> -->
                     </div>
                     {% endif %}
-                    <!--------- need more implementation ------------>
-                    <!-- Friend list link -->
-                 
+
                 </div>
-                <!------------------- ONE OF THEM SHOULD BE DELETED  ----------->
-
-                <!------    SECOND OF THEM SHOULD BE DELETED   --------------->
                 {% if checker.friend_requests %}
-
 
                 <!-- Friend requests -->
                 <div class="d-flex flex-row align-items-center m-2 px-4">
@@ -108,11 +97,11 @@
 
                 {% if checker.is_friend %}
                 <a href="/messages/?id={{account.id}}">
-                   
+
                     <div class="d-flex flex-row align-items-center justify-content-center icon-container m-auto px-2">
                         <span class="post btn friend-text "><i class="far fa-envelope"></i> Message</span>
 
-                   </div>
+                    </div>
                 </a>
 
                 {% endif %}
@@ -130,10 +119,10 @@
                                 <i class="fas fa-user"></i>
                                 About </a>
                         </li>
-                        
-                        
+
+
                         {% else %}
-                        
+
                         <li class="{% active_link 'profile' 'active' strict=True %}">
                             <a href="/profile/{{user.id}}">
                                 <i class="fas fa-home"></i>
@@ -164,7 +153,7 @@
             </div>
         </div>
         <div class="col-md-9">
-            
+
 
             {% block content %}{% endblock %}
         </div>
@@ -174,30 +163,13 @@
 
 <script type="text/javascript">
 
-    function onFriendRequestSent() {
-        location.reload();
-
-    }
-
-    function onFriendRequestAccepted() {
-        location.reload();
-    }
     function uiReload() {
         location.reload();
     }
-
-    function onFriendRequestCancelled() {
-        location.reload();
-    }
-
-    function onFriendRequestDeclined() {
-        location.reload();
-    }
-
     var sendFriendRequestBtn = document.getElementById("id_send_friend_request_btn")
     if (sendFriendRequestBtn != null) {
         sendFriendRequestBtn.addEventListener("click", function () {
-            sendFriendRequest("{{account.id}}", onFriendRequestSent)
+            sendFriendRequest("{{account.id}}", uiReload)
         })
     }
     var removeFriendBtn = document.getElementById("id_unfriend_btn")
@@ -208,13 +180,13 @@
     }
 
     function triggerAcceptFriendRequest(friend_request_id) {
-        acceptFriendRequest(friend_request_id, onFriendRequestAccepted)
+        acceptFriendRequest(friend_request_id, uiReload)
     }
 
     var cancelFriendRequestBtn = document.getElementById("id_cancel_friend_request_btn")
     if (cancelFriendRequestBtn != null) {
         cancelFriendRequestBtn.addEventListener("click", function () {
-            cancelFriendRequest("{{account.id}}", onFriendRequestCancelled)
+            cancelFriendRequest("{{account.id}}", uiReload)
         })
     }
 
@@ -222,7 +194,7 @@
 
     function triggerDeclineFriendRequest(friend_request_id) {
         alert(friend_request_id)
-        declineFriendRequest(friend_request_id, onFriendRequestDeclined)
+        declineFriendRequest(friend_request_id, uiReload)
     }
 
 
