--- a/groups/templates/groups/inv_already_sent.html
+++ b/groups/templates/groups/inv_already_sent.html
@@ -6,10 +6,10 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-12 text-center d-flex-column justify-content-center ">
-                        <span class="display-1 d-block">Unauthorized!</span>
-                        <div class="mb-4 lead ">You are trying to enter a page you're not authorized to enter!</div>
-                        <a href="{% url 'index' %}" style="width: 50%; margin-left: 25%;" class="btn post">Back to
-                            Home</a>
+                        <!-- <span class="display-1 d-block">Unauthorized!</span> -->
+                        <div class="mb-4 lead ">You already sent a request to this group.</div>
+                        <a href="{% url 'group' %}" style="width: 50%; margin-left: 25%;" class="btn post">Back to
+                            All Groups</a>
                     </div>
                 </div>
             </div>
