--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,23 +1,25 @@
 {% extends "layout.html"%}
-  {% block style %}
-  <style>
-  label{
-      display:none
-  }
-ul{
-     list-style: none; 
-}
-  textarea{
+{% block style %}
+<style>
+    label {
+        display: none
+    }
+
+    ul {
+        list-style: none;
+    }
+
+    textarea {
         float: left;
         width: 100%;
         height: 60px;
         border: 1px solid #e44d3a;
         border-radius: 10px;
-        margin-bottom:10px;
-  }
-  </style>
-  
-  {% endblock %}
+        margin-bottom: 10px;
+    }
+</style>
+
+{% endblock %}
 
 {% block body %}
 
@@ -43,7 +45,7 @@ ul{
                 <div class="d-flex pl-3">
                     <p><button class="mx-2" onclick="location.href='{% url "show" group.id %}';">visit group</button>
                     </p>
-                    <p><button class="mx-2" style="background-color:grey">leave group</button></p>
+                    <p><button class="mx-2" style="background-color:grey" onclick="location.href='{% url "leave" group.id %}';">leave group</button></p>
                 </div>
 
                 <hr>
@@ -59,33 +61,33 @@ ul{
         <!-- ----------------------------------------------------------- end side ----------------------------------- -->
         <div class="col-sm-8 mycard">
 
-                <div class="post-topbar">
-                    
-                    <form action='{% url "index" %}' method="post" enctype="multipart/form-data" >
-                        {% csrf_token %}
-               
-                      
-                        <div class="row">    
-                            <div class="col-10">
-                           {{form.as_p}}
-                   
-                            
-                                    {% if form.content.error %}
-                                    <div id="form-error">
-                                        {{form.content.errors.0}}
-                                    </div>
-                                    {% endif %}
-                            
+            <div class="post-topbar">
+
+                <form action='{% url "index" %}' method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+
+
+                    <div class="row">
+                        <div class="col-10">
+                            {{form.as_p}}
+
+
+                            {% if form.content.error %}
+                            <div id="form-error">
+                                {{form.content.errors.0}}
                             </div>
-                            
-                            <div class="col-2">
-                                <button class="post btn" type="submit" >Post</button>
-                            </div>   
-                        </div> 
-                    </form>
-                        
-                    
-                </div>
+                            {% endif %}
+
+                        </div>
+
+                        <div class="col-2">
+                            <button class="post btn" type="submit">Post</button>
+                        </div>
+                    </div>
+                </form>
+
+
+            </div>
 
             <h5>Feed Posts</h5>
 
@@ -127,7 +129,6 @@ ul{
                     <div style="text-align:right;width:80%">
                         <a href="{% url 'view' post.id%}" style="color:#e44d3a;"><i class="fa fa-comment mx-4 fa-lg "
                                 aria-hidden="true"></i></a>
-                        <!-- <a  href="#" style="color:#e44d3a;"><i class="fa fa-thumbs-up mx-4 fa-lg " aria-hidden="true"></i></a> -->
                         <form action="{% url 'like-post' %}" method="POST" style="display: inline-block;">
                             {% csrf_token %}
                             <input type="hidden" name="post_id" value="{{post.id}}">
