--- a/posts/templates/users/index.html
+++ b/posts/templates/users/index.html
@@ -5,15 +5,16 @@
     <div class="row pt-5">
         <div class="col-sm-4 ">
             <div class="mycard">
-           <form action="" method="GET">
-               <input type="text" name="q" id="" class="post_input " placeholder="Search for user by name" value="{{query}}">
-               <input type="submit" class="btn mt-2" value="Search">
-           </form>
-       </div>
-       
-   </div>
+                <form action="" method="GET">
+                    <input type="text" name="q" id="" class="post_input " placeholder="Search for user by name"
+                        value="{{query}}">
+                    <input type="submit" class="btn mt-2" value="Search">
+                </form>
+            </div>
+
+        </div>
         <div class="col-sm-8">
-            
+
             <div class="mycard">
                 <i class="fa fa-users fa-4x" aria-hidden="true"></i>
                 <h1>Results: </h1>
@@ -23,9 +24,9 @@
                 <h5>{{user.userprofile.first_name}} {{user.userprofile.last_name}}</h5>
                 <h6>UserName: {{user.username}}</h6>
                 <div class="d-flex justify-content-space-beween" style="width:100%">
-                    <a class="btn-secondary btn" href="/profile/{{user.id}}" ><i class="fas fa-user"></i>View Profile</a>
-                    <!-- <button class="post btn" style="width:35%;"><i class="fas fa-user-plus"></i>Add Friend</button> -->
-                    <a class="post btn" href="/messages/?id={{ user.id }}" ><i class="fas fa-envelope"></i>Send Message</a>
+                    <a class="btn-secondary btn" href="/profile/{{user.id}}"><i class="fas fa-user"></i>View Profile</a>
+                    <a class="post btn" href="/messages/?id={{ user.id }}"><i class="fas fa-envelope"></i>Send
+                        Message</a>
 
                 </div>
                 <hr>
