--- a/templates/404.html
+++ b/templates/404.html
@@ -1,13 +1,16 @@
 {% extends 'layout.html' %}
 {% block body %}
 <div class="container" style="padding-top: 30px;">
-    <div class="page-wrap d-flex flex-row align-items-center">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 text-center d-flex-column justify-content-center ">
-                    <span class="display-1 d-block">404</span>
-                    <div class="mb-4 lead ">The page you are looking for was not found.</div>
-                    <a href="{% url 'index' %}" style="width: 50%; margin-left: 25%;" class="btn post">Back to Home</a>
+    <div class="mycard">
+        <div class="page-wrap d-flex flex-row align-items-center">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 text-center d-flex-column justify-content-center ">
+                        <span class="display-1 d-block">404</span>
+                        <div class="mb-4 lead ">The page you are looking for was not found.</div>
+                        <a href="{% url 'index' %}" style="width: 50%; margin-left: 25%;" class="btn post">Back to
+                            Home</a>
+                    </div>
                 </div>
             </div>
         </div>
